# FanQie-AI

./: .gitignore  README.md  REFACTOR_PLAN.md  pyproject.toml  web_server.py
.trae/rules/: project_rules.md
docs/: CODE_WIKI.md  OPTIMIZATION_REPORT.md  chat-panel-plan.md  genre-template-golden3-plan.md  story-architecture-optimization.md
fanqie/: __init__.py  models.py
fanqie/cli/: main.py
fanqie/engine/: __init__.py  advisor.py  architect.py  auditor.py  brief_optimizer.py  composer.py  intervener.py  orchestrator.py  planner.py  reviser.py  settler.py  volume_planner.py  writer.py
fanqie/genres/: __init__.py  loader.py
fanqie/genres/builtin/: apocalypse.toml  cthulhu_cultivation.toml  mass_isekai.toml  rule_horror.toml  weird_descend.toml  xuanhuan.toml
fanqie/llm/: __init__.py  client.py
fanqie/memory/: __init__.py  bible_manager.py  context_assembly.py  fatigue_detector.py  hook_lifecycle.py  hook_policy.py  state_manager.py
fanqie/storage/: __init__.py  database.py  migrations.py  repository.py
fanqie/style/: __init__.py  analyzer.py  injector.py  profile.py
fanqie/utils/: config.py
web/: index.html
