[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fanqie"
version = "0.1.0"
description = "爽文 AI 智能体 — 长篇网文创作引擎"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "tomli>=2.0; python_version < '3.11'",
    "httpx>=0.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[project.scripts]
fanqie = "fanqie.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fanqie*"]
